# claude_python_template

./: .containerignore  .pre-commit-config.yaml  Containerfile.claude  README.md  pyproject.toml
src/claude_python_template/: main.py
